enable submission data monitoring

--- a/DDPTP/templates/individual_creation.html
+++ b/DDPTP/templates/individual_creation.html
@@ -5,4 +5,7 @@
         {{form.as_p}}
         <input type="submit" value="save" />
     </form>
+
+    <br>
+    <span>{{result}}</span>
 {% endblock %}
