--- a/DDPTP/templates/experiments/home.html
+++ b/DDPTP/templates/experiments/home.html
@@ -3,6 +3,7 @@
 
     <p>
         prediction experiment:
-        original score: {{ score }}
+        original score: {{ original_score }}
+        processed score: {{ processed_score }}
     </p>
 {% endblock %}
