--- a/DDPTP/templates/demo/index.html
+++ b/DDPTP/templates/demo/index.html
@@ -70,7 +70,7 @@
     </div>
 </div>
 
-<h2 class="text-center">Demo 2 (verification step demo)</h2>
+<!-- <h2 class="text-center">Demo 2 (verification step demo)</h2>
 <div class="row" class="text-center">
     <div class="col-md-6">
         <h3 class="text-center">DDPTP Application</h3>
@@ -86,5 +86,5 @@
             <p>The results are returned to the application</p>
         </div>
     </div>
-</div>
+</div> -->
 </html>
