add data abstraction result in prediction experiment

--- a/DDPTP/templates/experiments/home.html
+++ b/DDPTP/templates/experiments/home.html
@@ -9,6 +9,7 @@
 
         <h3>Adult Data Set</h3>
         original score: {{ adult_original_score }}<br>
-        processed score: {{ adult_processed_score }}
+        processed score: {{ adult_processed_score }}<br>
+        processed and abstracted score: {{ adult_abstracted_score }}
     </div>
 {% endblock %}
