change experiment to dynamic running

--- a/DDPTP/templates/base.html
+++ b/DDPTP/templates/base.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         {% include 'header.html' %}
 
-        {% block content1 %}
+        {% block content %}
         {% endblock %}
     </body>
 </html>
