--- a/DDPTP/templates/header.html
+++ b/DDPTP/templates/header.html
@@ -1,13 +1,5 @@
 <nav>
-    <ul>
-        <li>
-            clients
-        </li>
-        <li>
-            me
-        </li>
-        <li>
-            companies
-        </li>
-    </ul>
+    <a href="/">Home</a>
+    <a href="/demo/index">Demo</a>
+    <a href="/experiments">Experiments</a>
 </nav>
