--- a/DDPTP/templates/demo_index.html
+++ b/DDPTP/templates/demo_index.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-<html>
+{% extends 'base.html' %}
+{% block content %}
 <h1> Demo </h1>
 <h4> This is a process demonstration of the Digital Discrimination Prevention Third Party (DDPTP) model</h4>
 
@@ -87,4 +84,4 @@
         </div>
     </div>
 </div> -->
-</html>
+{% endblock %}
