--- a/DDPTP/templates/experiments.html
+++ b/DDPTP/templates/experiments.html
@@ -33,7 +33,81 @@
     <div>
         <h2>{{ texts.e2_title }}</h2>
         <p>{{ texts.e2_description }}</p>
-        <input class="form-control" id="e2_query" type="text" placeholder="Mysql query that returns numeric result">
+        <!-- <input class="form-control" id="e2_query" type="text" placeholder="Mysql query that returns numeric result"> -->
+        <div class="inline-headers">
+            <span class="h3 d-inline">{{ texts.e2_t1_title }}</span>
+            <p>{{ texts.e2_t1_description }}</p>
+        </div>
+        <div id="e2_t1">
+            <h4>{{ texts.e2_t1_subtitle1 }}</h4>
+            <div id="e2_t1_q1">
+                <span>{{ texts.e2_t1_q1_description }}</span>
+                <input class="d-inline" type="button" id="run_e2_t1_q1" name="run_e2_t1_q1" value="run query" />
+                <div id="e2_t1_q1_result" style="display: none;">
+                    number of instance in the database: <span id="e2_t1_q1_count"></span>
+                    <br>
+                    result (processed by DP algorithm): <span id="e2_t1_q1_processed_result"></span>
+                    <br>
+                    real result (not available to the organization): <span id="e2_t1_q1_original_result">****</span>
+                    <input class="d-inline" type="button" id="show_e2_t1_q1" name="show_e2_t1_q1" value="show" />
+                </div>
+            </div>
+            <div id="e2_t1_q2">
+                <span>{{ texts.e2_t1_q2_description }}</span>
+                <input class="d-inline" type="button" id="run_e2_t1_q2" name="run_e2_t1_q2" value="run query" />
+                <div id="e2_t1_q2_result" style="display: none;">
+                    number of instance in the database: <span id="e2_t1_q2_count"></span>
+                    <br>
+                    result (processed by DP algorithm): <span id="e2_t1_q2_processed_result"></span>
+                    <br>
+                    real result (not available to the organization): <span id="e2_t1_q2_original_result">****</span>
+                    <input class="d-inline" type="button" id="show_e2_t1_q2" name="show_e2_t1_q2" value="show" />
+                </div>
+            </div>
+            <div id="e2_t1_c12" style="display: none;">
+                <span>{{ texts.e2_t1_description2 }}</span>
+                <input class="d-inline" type="button" id="run_e2_t1_c1" name="run_e2_t1_c1" value="compute" />
+                <span id="e2_t1_c1_result"></span>
+                <br>
+                <span>{{ texts.e2_t1_description3 }}</span>
+                <input class="d-inline" type="button" id="run_e2_t1_c2" name="run_e2_t1_c2" value="compute" />
+                <span id="e2_t1_c2_result"></span>
+            </div>
+            <h4>{{ texts.e2_t1_subtitle2 }}</h4>
+            <div id="e2_t1_q3">
+                <span>{{ texts.e2_t1_q3_description }}</span>
+                <input class="d-inline" type="button" id="run_e2_t1_q3" name="run_e2_t1_q3" value="run query" />
+                <div id="e2_t1_q3_result" style="display: none;">
+                    number of instance in the database: <span id="e2_t1_q3_count"></span>
+                    <br>
+                    result (processed by DP algorithm): <span id="e2_t1_q3_processed_result"></span>
+                    <br>
+                    real result (not available to the organization): <span id="e2_t1_q3_original_result">****</span>
+                    <input class="d-inline" type="button" id="show_e2_t1_q3" name="show_e2_t1_q3" value="show" />
+                </div>
+            </div>
+            <div id="e2_t1_q4">
+                <span>{{ texts.e2_t1_q4_description }}</span>
+                <input class="d-inline" type="button" id="run_e2_t1_q4" name="run_e2_t1_q4" value="run query" />
+                <div id="e2_t1_q4_result" style="display: none;">
+                    number of instance in the database: <span id="e2_t1_q4_count"></span>
+                    <br>
+                    result (processed by DP algorithm): <span id="e2_t1_q4_processed_result"></span>
+                    <br>
+                    real result (not available to the organization): <span id="e2_t1_q4_original_result">****</span>
+                    <input class="d-inline" type="button" id="show_e2_t1_q4" name="show_e2_t1_q4" value="show" />
+                </div>
+            </div>
+            <div id="e2_t1_c34" style="display: none;">
+                <span>{{ texts.e2_t1_description2 }}</span>
+                <input class="d-inline" type="button" id="run_e2_t1_c3" name="run_e2_t1_c3" value="compute" />
+                <span id="e2_t1_c3_result"></span>
+                <br>
+                <span>{{ texts.e2_t1_description3 }}</span>
+                <input class="d-inline" type="button" id="run_e2_t1_c4" name="run_e2_t1_c4" value="compute" />
+                <span id="e2_t1_c4_result"></span>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -49,7 +123,7 @@
                 $('#e1_d1_result').show();
             },
             error: function(rs, e) {
-                alert(rs.responseText);
+                alert(e);
             }
         }); 
     })
@@ -67,9 +141,163 @@
                 $('#e1_d2_result').show();
             },
             error: function(rs, e) {
-                alert(rs.responseText);
+                alert(e);
             }
         }); 
+    })
+
+    e2_t1_q1_original_result = NaN;
+    e2_t1_q2_original_result = NaN;
+    e2_t1_q1_dp_result = NaN;
+    e2_t1_q2_dp_result = NaN;
+    new_count = NaN;
+    e2_t1_q3_original_result = NaN;
+    e2_t1_q4_original_result = NaN;
+    e2_t1_q3_dp_result = NaN;
+    e2_t1_q4_dp_result = NaN;
+    new_count_small = NaN;
+
+    $('#run_e2_t1_q1').click(function(){
+        $.ajax({
+            type: "POST",
+            url: "/experiments/run",
+            data: {'action': 'run_e2_t1_q1', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
+            dataType: "json",
+            success: function(response) {
+                e2_t1_q1_original_result = response.original_result;
+                e2_t1_q1_dp_result = response.dp_result;
+                $('#e2_t1_q1_count').text(response.count);
+                $('#e2_t1_q1_processed_result').text(response.dp_result);
+                $('#e2_t1_q1_result').show();
+            },
+            error: function(rs, e) {
+                alert(e);
+            }
+        }); 
+    })
+
+    $('#run_e2_t1_q2').click(function(){
+        $.ajax({
+            type: "POST",
+            url: "/experiments/run",
+            data: {'action': 'run_e2_t1_q2', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
+            dataType: "json",
+            success: function(response) {
+                e2_t1_q2_original_result = response.original_result;
+                e2_t1_q2_dp_result = response.dp_result;
+                new_count = response.count;
+                $('#e2_t1_q2_count').text(response.count);
+                $('#e2_t1_q2_processed_result').text(response.dp_result);
+                $('#e2_t1_q2_result').show();
+                $('#e2_t1_c12').show();
+            },
+            error: function(rs, e) {
+                alert(e);
+            }
+        }); 
+    })
+
+    $('#run_e2_t1_c1').click(function(){
+        result = e2_t1_q2_original_result*new_count - e2_t1_q1_original_result*(new_count-1)
+        $('#e2_t1_c1_result').text(e2_t1_q2_original_result+"*"+new_count+"-"+e2_t1_q1_original_result+"*("+new_count+"-1) = "+result);
+    })
+
+    $('#run_e2_t1_c2').click(function(){
+        result = e2_t1_q2_dp_result*new_count - e2_t1_q1_dp_result*(new_count-1)
+        $('#e2_t1_c2_result').text(e2_t1_q2_dp_result+"*"+new_count+"-"+e2_t1_q1_dp_result+"*("+new_count+"-1) = "+result);
+    })
+
+    $('#show_e2_t1_q1').click(function(){
+        if($('#show_e2_t1_q1').val() == "show"){
+            $('#e2_t1_q1_original_result').text(e2_t1_q1_original_result);
+            $('#show_e2_t1_q1').val("hide");
+        }
+        else if($('#show_e2_t1_q1').val() == "hide"){
+            $('#e2_t1_q1_original_result').text("****");
+            $('#show_e2_t1_q1').val("show");
+        }
+    })
+
+    $('#show_e2_t1_q2').click(function(){
+        if($('#show_e2_t1_q2').val() == "show"){
+            $('#e2_t1_q2_original_result').text(e2_t1_q2_original_result);
+            $('#show_e2_t1_q2').val("hide");
+        }
+        else if($('#show_e2_t1_q2').val() == "hide"){
+            $('#e2_t1_q2_original_result').text("****");
+            $('#show_e2_t1_q2').val("show");
+        }
+    })
+
+    $('#run_e2_t1_q3').click(function(){
+        $.ajax({
+            type: "POST",
+            url: "/experiments/run",
+            data: {'action': 'run_e2_t1_q3', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
+            dataType: "json",
+            success: function(response) {
+                e2_t1_q3_original_result = response.original_result;
+                e2_t1_q3_dp_result = response.dp_result;
+                $('#e2_t1_q3_count').text(response.count);
+                $('#e2_t1_q3_processed_result').text(response.dp_result);
+                $('#e2_t1_q3_result').show();
+            },
+            error: function(rs, e) {
+                alert(e);
+            }
+        }); 
+    })
+
+    $('#run_e2_t1_q4').click(function(){
+        $.ajax({
+            type: "POST",
+            url: "/experiments/run",
+            data: {'action': 'run_e2_t1_q4', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
+            dataType: "json",
+            success: function(response) {
+                e2_t1_q4_original_result = response.original_result;
+                e2_t1_q4_dp_result = response.dp_result;
+                new_count_small = response.count;
+                $('#e2_t1_q4_count').text(response.count);
+                $('#e2_t1_q4_processed_result').text(response.dp_result);
+                $('#e2_t1_q4_result').show();
+                $('#e2_t1_c34').show();
+            },
+            error: function(rs, e) {
+                alert(e);
+            }
+        }); 
+    })
+    $('#run_e2_t1_c3').click(function(){
+        result = e2_t1_q4_original_result*new_count_small - e2_t1_q3_original_result*(new_count_small-1);
+        $('#e2_t1_c3_result').text(e2_t1_q4_original_result+"*"+new_count_small+"-"+e2_t1_q3_original_result+"*("+new_count_small+"-1) = "+result);
+    })
+
+    $('#run_e2_t1_c4').click(function(){
+        result = e2_t1_q4_dp_result*new_count_small - e2_t1_q4_dp_result*(new_count_small-1);
+        $('#e2_t1_c4_result').text(e2_t1_q4_dp_result+"*"+new_count_small+"-"+e2_t1_q3_dp_result+"*("+new_count_small+"-1) = "+result);
+    })
+
+    $('#show_e2_t1_q3').click(function(){
+        if($('#show_e2_t1_q3').val() == "show"){
+            $('#e2_t1_q3_original_result').text(e2_t1_q3_original_result);
+            $('#show_e2_t1_q3').val("hide");
+        }
+        else if($('#show_e2_t1_q3').val() == "hide"){
+            $('#e2_t1_q3_original_result').text("****");
+            $('#show_e2_t1_q3').val("show");
+        }
+    })
+
+    $('#show_e2_t1_q4').click(function(){
+        if($('#show_e2_t1_q4').val() == "show"){
+            $('#e2_t1_q4_original_result').text(e2_t1_q4_original_result);
+            $('#show_e2_t1_q4').val("hide");
+        }
+        else if($('#show_e2_t1_q4').val() == "hide"){
+            $('#e2_t1_q4_original_result').text("****");
+            $('#show_e2_t1_q4').val("show");
+        }
     })
     </script>
 {% endblock %}
