--- a/DDPTP/templates/header.html
+++ b/DDPTP/templates/header.html
@@ -1,5 +1,13 @@
-<nav>
-    <a href="/">Home</a>
-    <a href="/demo/index">Demo</a>
-    <a href="/experiments">Experiments</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/demo/index">Demo</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/experiments">Experiments</a>
+        </li>
+    </ul>
 </nav>
