--- a/DDPTP/templates/experiments.html
+++ b/DDPTP/templates/experiments.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="container">
     <br>
     <h1>experiments</h1>
     <br>
     <div id="e1">
-
         <h2>{{ texts.e1_title }}</h2>
         <p>{{ texts.e1_description }}</p>
         <div class="inline-headers">
@@ -44,6 +44,7 @@
     <div id="e2">
         <h2>{{ texts.e2_title }}</h2>
         <p>{{ texts.e2_description }}</p>
+        <div id="curve_chart" style="width: 900px; height: 500px"></div>
         <div id="e2_t1">
             <span class="h3 d-inline">{{ texts.e2_t1_title }}</span>
             <p>{{ texts.e2_t1_description }}</p>
@@ -160,7 +161,26 @@
     </div>
 </div>
 
-    <script>
+<script type="text/javascript" src="{% static '/js/experiments.js' %}"></script>
+<script>
+    google.charts.load('current', {'packages':['corechart']});
+    google.charts.setOnLoadCallback(drawChart);
+
+    function drawChart() {
+    var figures = {{epsilon_and_noise|safe}};
+    var data = google.visualization.arrayToDataTable(figures);
+
+    var options = {
+        title: 'Epsilon and Noise',
+        curveType: 'function',
+        legend: { position: 'bottom' }
+    };
+
+    var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+
+    chart.draw(data, options);
+    }
+
     $('#run_e1_d1').click(function(){
         $.ajax({
             type: "POST",
@@ -428,7 +448,7 @@
         $.ajax({
             type: "POST",
             url: "/experiments/run",
-            data: {'action': 'run_e2_t1_c6', 'csrfmiddlewaretoken': '{{ csrf_token }}', 'real_result': e2_t1_q5_original_result, 'dp_result': e2_t1_q5_dp_result},
+            data: {'action': 'run_e2_t1_c6', 'csrfmiddlewaretoken': '{{ csrf_token }}', 'real_result': e2_t1_q5_original_result},
             dataType: "json",
             success: function(response) {
                 $('#e2_t1_c6_result').text("correct rate: "+response.correct_rate);
@@ -443,7 +463,7 @@
         $.ajax({
             type: "POST",
             url: "/experiments/run",
-            data: {'action': 'run_e2_t1_c7', 'csrfmiddlewaretoken': '{{ csrf_token }}', 'real_result': e2_t1_q5_original_result, 'dp_result': e2_t1_q5_dp_result},
+            data: {'action': 'run_e2_t1_c7', 'csrfmiddlewaretoken': '{{ csrf_token }}', 'real_result': e2_t1_q5_original_result},
             dataType: "json",
             success: function(response) {
                 $('#e2_t1_c7_result').text("correct rate: "+response.correct_rate);
@@ -483,6 +503,5 @@
             }
         }); 
     })
-    </script>
+</script>
 {% endblock %}
-
