--- a/DDPTP/templates/experiments.html
+++ b/DDPTP/templates/experiments.html
@@ -44,7 +44,15 @@
     <div id="e2">
         <h2>{{ texts.e2_title }}</h2>
         <p>{{ texts.e2_description }}</p>
-        <div id="curve_chart" style="width: 900px; height: 500px"></div>
+        <h3>{{ texts.e2_charts_title }}</h3>
+        <p>{{ texts.e2_charts_description }}</p>
+        <div class="row">
+            <figure class="col-md-5">
+                <img src="{% static '/images/Laplace_distribution.png' %}" width="450px" height="350px" title="from https://en.wikipedia.org/wiki/Laplace_distribution#/media/File:Laplace_pdf_mod.svg">
+                <figcaption style="text"><small>https://en.wikipedia.org/wiki/Laplace_distribution#/media/File:Laplace_pdf_mod.svg</small></figcaption>
+            </figure>
+            <div class="col-md-7" id="curve_chart" style="width: 900px; height: 400px"></div>
+        </div>
         <div id="e2_t1">
             <span class="h3 d-inline">{{ texts.e2_t1_title }}</span>
             <p>{{ texts.e2_t1_description }}</p>
@@ -159,349 +167,40 @@
             <span id="e2_t2_c2_result"></span>
         </div>
     </div>
+    <div id="e3">
+        <h2>{{ texts.e3_title }}</h2>
+        <p>{{ texts.e3_description }}</p>
+        <div id="e3_t1">
+            <h3>{{ texts.e3_t1_title }}</h3>
+            <input class="d-inline" type="button" id="run_e3_t1" name="run_e3_t1" value="run models" />
+            <br>
+            <span id="e3_t1_result_original"></span>
+            <br>
+            <span id="e3_t1_result_processed"></span>
+            <br>
+            <span id="e3_t1_result_abstracted"></span>
+        </div>
+    </div>
 </div>
 
-<script type="text/javascript" src="{% static '/js/experiments.js' %}"></script>
+<input type="hidden" id="csrf_token" value="{{ csrf_token }}">
+
+<script type="text/javascript" src="{% static '/js/experiment.js' %}"></script>
+
 <script>
     google.charts.load('current', {'packages':['corechart']});
     google.charts.setOnLoadCallback(drawChart);
 
     function drawChart() {
-    var figures = {{epsilon_and_noise|safe}};
-    var data = google.visualization.arrayToDataTable(figures);
-
-    var options = {
-        title: 'Epsilon and Noise',
-        curveType: 'function',
-        legend: { position: 'bottom' }
-    };
-
-    var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
-
-    chart.draw(data, options);
+        var figures = {{epsilon_and_noise|safe}};
+        var data = google.visualization.arrayToDataTable(figures);
+        var options = {
+            title: 'Epsilon and Noise',
+            curveType: 'function',
+            legend: { position: 'bottom' }
+        };
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
+        chart.draw(data, options);
     }
-
-    $('#run_e1_d1').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e1_d1', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                $('#e1_d1_original_score').text(response.statlog_original_score);
-                $('#e1_d1_processed_score').text(response.statlog_processed_score);
-                $('#e1_d1_result').show();
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    $('#run_e1_d2').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e1_d2', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                $('#e1_d2_original_score').text(response.adult_original_score);
-                $('#e1_d2_processed_score').text(response.adult_processed_score);
-                $('#e1_d2_abstracted_score').text(response.adult_abstracted_score);
-                $('#e1_d2_result').show();
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    e2_t1_q1_original_result = NaN;
-    e2_t1_q2_original_result = NaN;
-    e2_t1_q1_dp_result = NaN;
-    e2_t1_q2_dp_result = NaN;
-    new_count = NaN;
-    e2_t1_q3_original_result = NaN;
-    e2_t1_q4_original_result = NaN;
-    e2_t1_q3_dp_result = NaN;
-    e2_t1_q4_dp_result = NaN;
-    new_count_small = NaN;
-    e2_t1_q5_original_result = NaN;
-    e2_t1_q6_original_result = NaN;
-    e2_t1_q5_dp_result = NaN;
-    e2_t1_q6_dp_result = NaN;
-
-    $('#run_e2_t1_q1').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t1_q1', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                e2_t1_q1_original_result = response.original_result;
-                e2_t1_q1_dp_result = response.dp_result;
-                $('#e2_t1_q1_count').text(response.count);
-                $('#e2_t1_q1_processed_result').text(response.dp_result);
-                $('#e2_t1_q1_result').show();
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    $('#run_e2_t1_q2').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t1_q2', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                e2_t1_q2_original_result = response.original_result;
-                e2_t1_q2_dp_result = response.dp_result;
-                new_count = response.count;
-                $('#e2_t1_q2_count').text(response.count);
-                $('#e2_t1_q2_processed_result').text(response.dp_result);
-                $('#e2_t1_q2_result').show();
-                $('#e2_t1_c12').show();
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    $('#run_e2_t1_c1').click(function(){
-        result = e2_t1_q2_original_result*new_count - e2_t1_q1_original_result*(new_count-1)
-        $('#e2_t1_c1_result').text(e2_t1_q2_original_result+"*"+new_count+"-"+e2_t1_q1_original_result+"*("+new_count+"-1) = "+result);
-    })
-
-    $('#run_e2_t1_c2').click(function(){
-        result = e2_t1_q2_dp_result*new_count - e2_t1_q1_dp_result*(new_count-1)
-        $('#e2_t1_c2_result').text(e2_t1_q2_dp_result+"*"+new_count+"-"+e2_t1_q1_dp_result+"*("+new_count+"-1) = "+result);
-    })
-
-    $('#show_e2_t1_q1').click(function(){
-        if($('#show_e2_t1_q1').val() == "show"){
-            $('#e2_t1_q1_original_result').text(e2_t1_q1_original_result);
-            $('#show_e2_t1_q1').val("hide");
-        }
-        else if($('#show_e2_t1_q1').val() == "hide"){
-            $('#e2_t1_q1_original_result').text("****");
-            $('#show_e2_t1_q1').val("show");
-        }
-    })
-
-    $('#show_e2_t1_q2').click(function(){
-        if($('#show_e2_t1_q2').val() == "show"){
-            $('#e2_t1_q2_original_result').text(e2_t1_q2_original_result);
-            $('#show_e2_t1_q2').val("hide");
-        }
-        else if($('#show_e2_t1_q2').val() == "hide"){
-            $('#e2_t1_q2_original_result').text("****");
-            $('#show_e2_t1_q2').val("show");
-        }
-    })
-
-    $('#run_e2_t1_q3').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t1_q3', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                e2_t1_q3_original_result = response.original_result;
-                e2_t1_q3_dp_result = response.dp_result;
-                $('#e2_t1_q3_count').text(response.count);
-                $('#e2_t1_q3_processed_result').text(response.dp_result);
-                $('#e2_t1_q3_result').show();
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    $('#run_e2_t1_q4').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t1_q4', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                e2_t1_q4_original_result = response.original_result;
-                e2_t1_q4_dp_result = response.dp_result;
-                new_count_small = response.count;
-                $('#e2_t1_q4_count').text(response.count);
-                $('#e2_t1_q4_processed_result').text(response.dp_result);
-                $('#e2_t1_q4_result').show();
-                $('#e2_t1_c34').show();
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-    $('#run_e2_t1_c3').click(function(){
-        result = e2_t1_q4_original_result*new_count_small - e2_t1_q3_original_result*(new_count_small-1);
-        $('#e2_t1_c3_result').text(e2_t1_q4_original_result+"*"+new_count_small+"-"+e2_t1_q3_original_result+"*("+new_count_small+"-1) = "+result);
-    })
-
-    $('#run_e2_t1_c4').click(function(){
-        result = e2_t1_q4_dp_result*new_count_small - e2_t1_q3_dp_result*(new_count_small-1);
-        $('#e2_t1_c4_result').text(e2_t1_q4_dp_result+"*"+new_count_small+"-"+e2_t1_q3_dp_result+"*("+new_count_small+"-1) = "+result);
-    })
-
-    $('#show_e2_t1_q3').click(function(){
-        if($('#show_e2_t1_q3').val() == "show"){
-            $('#e2_t1_q3_original_result').text(e2_t1_q3_original_result);
-            $('#show_e2_t1_q3').val("hide");
-        }
-        else if($('#show_e2_t1_q3').val() == "hide"){
-            $('#e2_t1_q3_original_result').text("****");
-            $('#show_e2_t1_q3').val("show");
-        }
-    })
-
-    $('#show_e2_t1_q4').click(function(){
-        if($('#show_e2_t1_q4').val() == "show"){
-            $('#e2_t1_q4_original_result').text(e2_t1_q4_original_result);
-            $('#show_e2_t1_q4').val("hide");
-        }
-        else if($('#show_e2_t1_q4').val() == "hide"){
-            $('#e2_t1_q4_original_result').text("****");
-            $('#show_e2_t1_q4').val("show");
-        }
-    })
-
-    $('#run_e2_t1_q5').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t1_q5', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                e2_t1_q5_original_result = response.original_result;
-                e2_t1_q5_dp_result = response.dp_result;
-                $('#e2_t1_q5_count').text(response.count);
-                $('#e2_t1_q5_processed_result').text(response.dp_result);
-                $('#e2_t1_q5_result').show();
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    $('#run_e2_t1_q6').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t1_q6', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                e2_t1_q6_original_result = response.original_result;
-                e2_t1_q6_dp_result = response.dp_result;
-                $('#e2_t1_q6_processed_result').text(response.dp_result);
-                $('#e2_t1_q6_result').show();
-                $('#e2_t1_c567').show();
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    $('#show_e2_t1_q5').click(function(){
-        if($('#show_e2_t1_q5').val() == "show"){
-            $('#e2_t1_q5_original_result').text(e2_t1_q5_original_result);
-            $('#show_e2_t1_q5').val("hide");
-        }
-        else if($('#show_e2_t1_q5').val() == "hide"){
-            $('#e2_t1_q5_original_result').text("****");
-            $('#show_e2_t1_q5').val("show");
-        }
-    })
-
-    $('#show_e2_t1_q6').click(function(){
-        if($('#show_e2_t1_q6').val() == "show"){
-            $('#e2_t1_q6_original_result').text(e2_t1_q6_original_result);
-            $('#show_e2_t1_q6').val("hide");
-        }
-        else if($('#show_e2_t1_q6').val() == "hide"){
-            $('#e2_t1_q6_original_result').text("****");
-            $('#show_e2_t1_q6').val("show");
-        }
-    })
-
-    $('#run_e2_t1_c5').click(function(){
-        if(e2_t1_q6_dp_result>e2_t1_q5_dp_result){
-            result = "The new entry is a single male"
-        }
-        else{
-            result = "The new entry is not a single male"
-        }
-        $('#e2_t1_c5_result').text(result);
-    })
-
-    $('#run_e2_t1_c6').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t1_c6', 'csrfmiddlewaretoken': '{{ csrf_token }}', 'real_result': e2_t1_q5_original_result},
-            dataType: "json",
-            success: function(response) {
-                $('#e2_t1_c6_result').text("correct rate: "+response.correct_rate);
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    $('#run_e2_t1_c7').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t1_c7', 'csrfmiddlewaretoken': '{{ csrf_token }}', 'real_result': e2_t1_q5_original_result},
-            dataType: "json",
-            success: function(response) {
-                $('#e2_t1_c7_result').text("correct rate: "+response.correct_rate);
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    $('#run_e2_t2_c1').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t2_c1', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                $('#e2_t2_c1_result').text("noise sum: "+response.noise_sum);
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
-
-    $('#run_e2_t2_c2').click(function(){
-        $.ajax({
-            type: "POST",
-            url: "/experiments/run",
-            data: {'action': 'run_e2_t2_c2', 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                $('#e2_t2_c2_result').text("noise sum: "+response.noise_sum);
-            },
-            error: function(rs, e) {
-                alert(e);
-            }
-        }); 
-    })
 </script>
 {% endblock %}
