really finish experiment3

--- a/DDPTP/templates/experiments.html
+++ b/DDPTP/templates/experiments.html
@@ -210,6 +210,25 @@
                 </tr>
             </table>
         </div>
+        <div id="e3_t2">
+            <h3>{{ texts.e3_t2_title }}</h3>
+            <p>{{ texts.e3_t2_description }}</p>
+            <input class="d-inline" type="button" id="run_e3_t2" name="run_e3_t2" value="run models" />
+            <table style="width:100%;">
+                <tr>
+                    <th>model</th>
+                    <th>marital status and sex</th>
+                </tr>
+                <tr>
+                    <td>model 1</td>
+                    <td id="e3_t2_m1_marital_status_and_sex"></td>
+                </tr>
+                <tr>
+                    <td>model 2</td>
+                    <td id="e3_t2_m2_marital_status_and_sex"></td>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
 
