--- a/DDPTP/templates/submission.html
+++ b/DDPTP/templates/submission.html
@@ -8,7 +8,7 @@
     <p>{{ texts.description }}</p>
     <form method="POST" action="index"> {% csrf_token %}
         {{form.as_p}}
-        <input type="submit" value="save" name="submission"/>
+        <input type="submit" value="submit" name="submission"/>
     </form>
 </div>
 
@@ -24,10 +24,8 @@ $("p").addClass("form-group");
 $("input").addClass("form-control");
 $("select").addClass("form-control");
 $("[name='submission']").addClass("btn btn-success");
-$("<span class='text-info'>(Protected) </span>").insertBefore("[for='id_marital_status']");
-$("<span class='text-info'>(Protected) </span>").insertBefore("[for='id_race']");
-$("<span class='text-info'>(Protected) </span>").insertBefore("[for='id_sex']");
-$("<span class='text-info'>(Protected) </span>").insertBefore("[for='id_native_country']");
+$("<span class='text-info'>(Protected) </span>").insertBefore("[for='id_age']");
+$("<span class='text-info'>(Protected) </span>").insertBefore("[for='id_personal_status_and_sex']");
 </script>
 
 {% endblock %}
